objects/Form_System_History__c.object
<CustomObject>
    <fields>
        <fullName>ExternalHistory_Key__c</fullName>
        <externalId>true</externalId>
        <label>ExternalHistory_Key</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <label>Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <description>created for legacy data upload</description>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Main_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Form</label>
        <referenceTo>Form_Management_System__c</referenceTo>
        <relationshipName>Main_Form_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_Of_Form__c</fullName>
        <formula>Main_Form__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Of Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isProcessed</label>
        <type>Checkbox</type>
    </fields>
    <label>Form System History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FMS-{000000000}</displayFormat>
        <label>Form System History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form System Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>